# multiswarm

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst  reference.rst
docs/source/notebooks/: intro.ipynb  mpipso-ackley-4d.py  multiswarm-ackley-4d.py
mpipso/: __init__.py  mpi_utils.py  pso_update.py
mpipso/tests/: test_pso_update.py
multiswarm/: __init__.py  pso_update.py
notebooks/: inspect_swarm_results.ipynb
notebooks/pso_multidiff/: pso_multidiff.py
scripts/: pso_ackley.py  pso_script.py
