[project]
name = "multiswarm"
authors = [
    {name = "Alan Pearl", email = "alanpearl13@gmail.com"},
    {name = "Andrew Hearin", email = "ahearin@anl.gov"}
]
description = "Particle Swarm Optimization with mpi4py"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
home = "https://github.com/AlanPearl/multiswarm"

[tool.setuptools_scm]
write_to = "multiswarm/_version.py"
write_to_template = "__version__ = '{version}'"

[tool.setuptools]
include-package-data = true
packages = {find = {exclude=["tests*", "scripts*", "docs*", "notebooks*"]}}
package-dir = {multiswarm = "multiswarm"}

[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm>=7"
]
build-backend = "setuptools.build_meta"
